--- a/resources/nuggets_bootstrap_config.json.tmpl
+++ b/resources/nuggets_bootstrap_config.json.tmpl
@@ -1,7 +1,7 @@
 {
   "eth_rpc": "{{.ETH_RPC}}",
   "eth_priv_key": "{{.ETH_PRIV_KEY}}",
-  "rollup_seq_url": "http://127.0.0.1:9944",
+  "rollup_seq_url": "{{.ROLLUP_SEQUENCER_URL}}",
   "rollup_priv_key": "0xabcd",
   "eth_chain_id": {{.ETH_CHAIN_ID}},
   "l1_deployer_address": "{{.L1_DEPLOYER_ADDRESS}}",
@@ -9,14 +9,14 @@
   "sn_os_program_hash": "0x41fc2a467ef8649580631912517edcab7674173f1dbfa2e9b64fbcd82bc4d79",
   "config_hash_version": "StarknetOsConfig2",
   "app_chain_id": "{{.APP_CHAIN_ID}}",
-  "fee_token_address": "0x049d36570d4e46f48e99674bd3fcc84644ddd6b96f7c741b1562b82f9e004dc7",
-  "native_fee_token_address": "0x04718f5a0fc34cc1af16a1cdee98ffb20c31f5cd61d6ab07201858f4287c938d",
+  "fee_token_address": "{{.PARENT_FEE_TOKEN_ADDRESS}}",
+  "native_fee_token_address": "{{.NATIVE_FEE_TOKEN_ADDRESS}}",
   "cross_chain_wait_time": 20,
   "l1_multisig_address": "0x70997970C51812dc3A010C7d01b50e0d17dc79C8",
   "l2_multisig_address": "0x556455b8ac8bc00e0ad061d7df5458fa3c372304877663fa21d492a8d5e9435",
   "verifier_address": "0x000000000000000000000000000000000000abcd",
   "operator_address": "0x000000000000000000000000000000000000abcd",
   "dev": false,
-  "core_contract_address": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
+  "core_contract_address": "{{.ETH_CORE_CONTRACT_ADDRESS}}",
   "core_contract_implementation_address": "0x5fbdb2315678afecb367f032d93f642f64180aa3"
 }
