:sparkles: (starknet) Follow Madara Orchestrator to UDC step

--- a/resources/nuggets_bootstrap_config.json.tmpl
+++ b/resources/nuggets_bootstrap_config.json.tmpl
@@ -1,7 +1,7 @@
 {
   "eth_rpc": "{{.ETH_RPC}}",
   "eth_priv_key": "{{.ETH_PRIV_KEY}}",
-  "rollup_seq_url": "http://127.0.0.1:9944",
+  "rollup_seq_url": "{{.SEQUENCER_RPC_URL}}",
   "rollup_priv_key": "0xabcd",
   "eth_chain_id": {{.ETH_CHAIN_ID}},
   "l1_deployer_address": "{{.L1_DEPLOYER_ADDRESS}}",
